# deliver-cli-rust

./: .spec_last_used  Cargo.toml  README.md  SC_INIT_GUIDE.md  TASKS_JSON_GUIDE.md
projects/active/Correct Name/: .epoch-context.md  Specification.md
projects/active/test-embedded/: Specification.md
projects/active/test-feature/: .epoch-context.md  Requirements.md
src/: main.rs
src/assets/: default-spec.yaml
src/cli/: commands.rs
src/io/: mod.rs  openapi_loader.rs  template_engine.rs
src/manager/: mod.rs  spec_manager.rs
src/markdown/: analyzer.rs  mod.rs  parser.rs  updater.rs
src/mcp/: server.rs
src/workflow/: mod.rs  stage.rs  state.rs
tests/: init_test.rs  workflow_test.rs
