[package]
name = "deliver-cli"
version = "0.1.9"
edition = "2024"
description = "Streamlined MCP server for managing spec workflow (requirements, design, implementation)"
license = "MIT"
repository = "https://github.com/benmurray/deliver-cli-rust"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
fs_extra = "1.3.0"
rust-mcp-sdk = "0.9.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.1", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
